Change to an nginx image suitable for Openshift

--- a/webUI/Dockerfile
+++ b/webUI/Dockerfile
@@ -7,7 +7,7 @@ RUN npm install
 RUN npm run build
 EXPOSE 3000
 
-FROM nginx:1.23.4
+FROM nginxinc/nginx-unprivileged:1.23
 COPY --from=build /src/dist /usr/share/nginx/html
 CMD ["nginx", "-g", "daemon off;"]
-EXPOSE 80
+EXPOSE 8080
