Try not to run as root

--- a/backend/backend/Dockerfile
+++ b/backend/backend/Dockerfile
@@ -1,6 +1,13 @@
 # syntax=docker/dockerfile:1
 
+ARG UID=101
+ARG GID=101
+
 FROM python:3.11
+
+RUN set -x \
+    && addgroup --system --gid $GID djangouser || true \
+    && adduser --system --disabled-login --ingroup nginx --no-create-home --home /nonexistent --gecos "nginx user" --shell /bin/false --uid $UID djangouser || true \
 
 RUN pip install django
 RUN pip install mysqlclient
@@ -10,5 +17,7 @@ RUN pip install django-filter
 RUN pip install django-cors-headers
 WORKDIR /src
 COPY ./ ./
+RUN python manage.py migrate
+RUN chmod 777 .
 CMD python manage.py runserver 0.0.0.0:8000
 EXPOSE 8000
