--- a/recipeUI.yml
+++ b/recipeUI.yml
@@ -4,12 +4,12 @@ version: '3.1'
 services:
 
   react:
-    build: ./recipe-webUI/
+    build: ./webUI/
     ports:
       - 3000:3000
     restart: always
   django:
-    build: ./recipe-backend/recipe_backend/
+    build: ./backend/backend/
     ports:
       - 8000:8000
     restart: always
