--- a/deploy.yaml
+++ b/deploy.yaml
@@ -4,16 +4,34 @@ metadata:
   name: recipe-ui
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: recipe-web
   template:
+    metadata:
+      labels:
+        app: recipe-web
     spec:
-    containters:
-      - name: recipe-ui
-        image: ui-docker-image
-        ports:
-          - name: http
-            containerPort: 8080
-            protocol: http
-        resources:
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
+      containters:
+        - name: recipe-ui
+          image: ui-docker-image
+          ports:
+            - name: tcp
+              containerPort: 8080
+              protocol: tcp
+          resources:
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
+
+---
+kind: Service
+apiVersion: v1
+spec:
+ports:
+  - name: http
+    port: 8080
+    protocol: tcp
+    targetPort: 8080
+selector:
+  app: recipe-web
