--- a/devfile.yaml
+++ b/devfile.yaml
@@ -7,6 +7,7 @@ components:
       imageName: ui-docker-image
       dockerfile:
         buildContext: ./webUI/
+        uri: ./Dockerfile
   - name: ui-container
     attributes:
       deployment/replicas: 1
