--- a/deploy.yaml
+++ b/deploy.yaml
@@ -16,7 +16,7 @@ spec:
         - name: recipe-ui
           image: ui-docker-image
           ports:
-            - name: tcp
+            - name: http
               containerPort: 8080
               protocol: tcp
           resources:
