--- a/webUI/deploy.yaml
+++ b/webUI/deploy.yaml
@@ -12,13 +12,13 @@ spec:
       labels:
         app: recipe-web
     spec:
-      containters:
+      containers:
         - name: recipe-ui
           image: ui-docker-image
           ports:
             - name: http
               containerPort: 8080
-              protocol: tcp
+              protocol: TCP
           resources:
             limits:
               memory: "128Mi"
@@ -37,6 +37,7 @@ selector:
   app: recipe-web
 
 ---
+
 apiVersion: route.openshift.io/v1
 kind: Route
 spec:
