--- a/webUI/Dockerfile
+++ b/webUI/Dockerfile
@@ -9,5 +9,6 @@ EXPOSE 3000
 
 FROM nginxinc/nginx-unprivileged:1.23
 COPY --from=build /src/dist /usr/share/nginx/html
+COPY ./default.conf /etc/nginx/conf.d/default.conf
 CMD ["nginx", "-g", "daemon off;"]
 EXPOSE 8080
