Change to .env file.

--- a/recipeUI.yml
+++ b/recipeUI.yml
@@ -10,9 +10,14 @@ services:
     labels:
       kompose.service.expose: true
   django:
-    build: ./backend/backend/
+    build:
+      context: ./backend/backend/
+      args:
+        MYSQL_USERNAME: ${MYSQL_USERNAME}
+        MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     ports:
       - 8000:8000
     restart: always
-    env_file:
-      - production.env
+    environment:
+      - MYSQL_USERNAME=${MYSQL_USERNAME}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
