Add required changes to support build args and environment variables.

--- a/backend/backend/Dockerfile
+++ b/backend/backend/Dockerfile
@@ -5,6 +5,12 @@ ARG GID=101
 
 FROM python:3.11
 
+ARG MYSQL_USERNAME
+ARG MYSQL_PASSWORD
+ARG MYSQL_HOSTNAME
+ARG MYSQL_DB
+ARG MYSQL_PORT
+
 RUN set -x \
     && addgroup --system --gid $GID djangouser || true \
     && adduser --system --disabled-login --ingroup djangouser --no-create-home --home /nonexistent --gecos "djangouser user" --shell /bin/false --uid $UID djangouser || true
@@ -17,7 +23,8 @@ RUN pip install django-filter
 RUN pip install django-cors-headers
 WORKDIR /src
 COPY ./ ./
-RUN python manage.py migrate
+RUN export 
+RUN python manage.py migrate 
 RUN chmod 777 .
 USER $UID
 CMD python manage.py runserver 0.0.0.0:8000
