--- a/webUI/default.conf
+++ b/webUI/default.conf
@@ -11,10 +11,16 @@ server {
         try_files $uri @proxy_api;
     }
 
+    location /static/ {
+        try_files $uri @proxy_api;
+    }
+
     location @proxy_api {
+        proxy_http_version 1.1;
         proxy_set_header X-Url-Scheme $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
+        proxy_set_header If-Modified-Since $http_if_modified_since;
         proxy_redirect off;
         proxy_pass   http://django:8000;
     }
